tools/kong/kustomization/ingress-appv1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appv1-ingress
  namespace: staging  # Pas
  annotations: 
    kubernetes.io/ingress.class: kong
spec:
  tls:
  - hosts:
    - coba-coba-aja.website
    secretName: cloudflare-tls
  rules:
  - host: coba-coba-aja.website
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
