tools/kong/kustomization/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd  # Pas
  annotations: 
    kubernetes.io/ingress.class: kong
spec:
  tls:
  - hosts:
    - argocd.coba-coba-aja.website
    secretName: cloudflare-argo
  rules:
  - host: argocd.coba-coba-aja.website
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
